Fix wide nav (collapse broke)

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -178,7 +178,7 @@ footer .navbar-default {
 }
 
 /* collapse to max of 1000px */
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
   .navbar-header {
     float: none;
   }
